# gpx-coords-tools

./: .gitignore  Cargo.toml  README.md  calc_distance_from_json_point.rs  comparator.rs  file_utils.rs  find_closest_points.rs  folder_to_json.rs  gpx_to_json.rs  gpx_utils.rs  reader.rs  tiles_to_json.rs  utils.rs
destination/: final.json
src/: file_utils.rs  gpx_utils.rs  main.rs  utils.rs
