[package]
name = "coords-tool-valpinera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
gpx = "0.9.1"
serde = "1.0.188"
serde_json = "1.0.107"

[[bin]]
name = "comparator"
path = "comparator.rs"

[[bin]]
name = "reader"
path = "reader.rs"

[[bin]]
name = "find_closest_points"
path = "find_closest_points.rs"
