[package]
name = "coords-tool-valpinera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
gpx = "0.9.1"
json = "0.12.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[[bin]]
name = "comparator"
path = "comparator.rs"

[[bin]]
name = "reader"
path = "reader.rs"

[[bin]]
name = "find_closest_points"
path = "find_closest_points.rs"

[[bin]]
name = "calc_distance_from_json_point"
path = "calc_distance_from_json_point.rs"

[[bin]]
name = "gpx_to_json"
path = "gpx_to_json.rs"

[[bin]]
name = "tiles_to_json"
path = "tiles_to_json.rs"

[[bin]]
name = "folder_to_json"
path = "folder_to_json.rs"
